# uplink

./: .gitignore  .gitmodules  .justfile  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  QUICKSTART.md  README.md  aarch.sh  actions.sh  config.toml  daemonset.yaml  design.md  ec25crosscompile.sh  index.md  install.sh  k8s.sh  notes.md  run.sh  rust-toolchain.toml  rustfmt.toml  simulator.sh  ssl.json  system-stats.install.sh
.art/: argonaut-cloud-uplink.yaml  argonaut-gcp-stage-simulator.yaml  argonaut-stage-stage-simulator.yaml
.cargo/: config  config.toml  gcc.sh
.github/: pull_request_template.md
.persistence/: actions_routing_cache.json  events.db  events.db-shm  events.db-wal
.sqlx/: query-13369ca393c2d834e1eb6a88318937970562a7dd07a650966126e80038dca9cc.json  query-2b595edd80e01c38d5792760e3c9ddfa27d5617cec346fcd252e1db7259241ec.json  query-35e683c65ca4c8ff9272a4c32ea6197312ac6aeb07dd7f0ab0a61b08468a129b.json  query-41ca2170d8f855463f7f8d95ad6591590b8fb84685e397655bd6250b83aac2ea.json  query-63178e327a5e110d8d31e4f2fbe9c21a70fe3d4a9335689b34a2a38dec3cf6b5.json  query-b452087781be1222c5f9a71a5b72b32ae853c59533b8f82903c76f2e8fc377f9.json
base/: Cargo.toml
bridge/: Cargo.toml
bridge/src/: lib.rs  metrics.rs  stream.rs
collectors/: Cargo.toml
collectors/simulator/: Cargo.toml
collectors/simulator/src/: lib.rs  main.rs
collectors/src/: lib.rs
collectors/src/simulator/: mod.rs
configs/: android.toml  config.json  config.toml  demo.toml  device_demo.json  dummy.json  local.toml  minimal.toml  noauth.json  simulator.json  simulator.toml  stress.toml  toxic.json
demo/: app.go  app.py  bridge.go  bridge.py
devices/: device_1.json  device_10.json  device_11.json  device_12.json  device_13.json  device_14.json  device_15.json  device_16.json  device_17.json  device_18.json  device_19.json  device_2.json  device_20.json  device_21.json  device_22.json  (+14 more)
disk/: Cargo.toml
disk/src/: lib.rs  storage.rs
examples/demo/: Cargo.toml
examples/demo/examples/: demo.rs
persistentstream/: Cargo.toml  README.md  design.md  rustfmt.toml
persistentstream/benches/: bench.rs
persistentstream/src/: lib.rs  sender.rs
persistentstream/tests/: channel.rs
serializer/: Cargo.toml
serializer/src/: lib.rs  metrics.rs
simulator/: Cargo.toml
simulator/src/: main.rs
storage/: Cargo.toml
storage/src/: lib.rs  test.rs
tools/deserialize-backup/: Cargo.toml
tools/deserialize-backup/src/: main.rs
tools/simulator/: Cargo.toml
tools/simulator/src/: basic.rs  data.rs  ice_driver.rs  main.rs
tools/stdout-collector/: Cargo.toml  README.md
tools/stdout-collector/src/: main.rs
tools/system-stats/: Cargo.toml
tools/system-stats/src/: lib.rs  main.rs
tools/tunshell/: Cargo.toml  testing.ts
tools/tunshell/src/: main.rs
tools/utils/: Cargo.toml
tools/utils/src/: benchmark.rs  push_data.rs  push_to_uplink.rs  test.rs  wait_and_send.rs
tunshell/: Cargo.toml
tunshell/src/: main.rs
uplink/: Cargo.toml  build.rs
uplink-android/: .gitignore  Cargo.toml  README.md  build.gradle  build.rs  settings.gradle
uplink-android/lib/: build.gradle
uplink-android/lib/src/main/java/io/bytebeam/uplink/: InternalPointerMarker.java  JNIReachabilityFence.java  NativeUtils.java  Uplink.java
uplink-android/lib/src/test/java/io/bytebeam/uplink/: UplinkTest.java
uplink-android/src/: java_glue.rs.in  jni_c_header.rs  lib.rs
uplink-jni/: Cargo.toml  Makefile  README.md
uplink-jni/examples/: Uplink.java
uplink-jni/src/: lib.rs
uplink/examples/: log_collector.rs
uplink/src/: apis.rs  base.rs  cli.rs  config.rs  console.rs  lib.rs  main.rs  mock.rs  monitor.rs  prometheus.rs  tracing.rs  uplink_config.rs  utils.rs
uplink/src/apps/: downloader.rs  installer.rs  process.rs  simulator.rs  systemstats.rs  tcpjson.rs  tunshell.rs
uplink/src/apps/logging/: journalctl.rs  logcat.rs  mod.rs
uplink/src/base/: actions.rs  compress.rs  mod.rs  monitor.rs  mqtt.rs  serializer.rs  tcpjson.rs  tunshell.rs
uplink/src/base/actions/: controller.rs  journalctl.rs  logcat.rs  mod.rs  ota.rs  process.rs  response.rs  tunshell.rs
uplink/src/base/actions/logging/: journalctl.rs  logcat.rs  mod.rs
uplink/src/base/base/: mod.rs
uplink/src/base/base/actions/: mod.rs
uplink/src/base/bridge/: actions_lane.rs  bridge.rs  bridge_impl.rs  data_lane.rs  delaymap.rs  device_shadow.rs  metrics.rs  mod.rs  stream.rs  streams.rs
uplink/src/base/events/: mod.rs  pusher.rs
uplink/src/base/metrics/: mod.rs  serializer.rs  stream.rs
uplink/src/base/middleware/: actions.rs  middleware.rs  mod.rs  ota.rs  process.rs  tunshell.rs
uplink/src/base/monitor/: mod.rs
uplink/src/base/mqtt/: metrics.rs  mod.rs
uplink/src/base/serializer/: metrics.rs  mod.rs  serializer.rs  serializer_impl.rs  storage.rs
uplink/src/base/stream/: metrics.rs  mod.rs
uplink/src/bridge/: actions_lane.rs  metrics.rs  mod.rs  stream.rs  streams.rs  utils.rs
uplink/src/collector/: bridge.rs  bus.rs  clickhouse.rs  clickhouse_collector.rs  device_shadow.rs  docker_stats.rs  downloader.rs  events.rs  installer.rs  journalctl.rs  k8s.rs  log_reader.rs  logcat.rs  mod.rs  new_downloader.rs  preconditions.rs  process.rs  prometheus.rs  script_runner.rs  serial.rs  serial2.rs  simulator.rs  simulator2.rs  stdio.rs  stdout.rs  systemstats.rs  tcpjson.rs  tcpstatus.rs  telemetry.rs  tunshell.rs  util.rs
uplink/src/collector/bus/: joins.rs  mod.rs
uplink/src/collector/downloader/: metrics.rs  mod.rs
uplink/src/collector/logging/: journalctl.rs  logcat.rs  mod.rs
uplink/src/collector/simulator/: data.rs  ice_driver.rs  mod.rs
uplink/src/collector/simulator/data/: default.rs  driver.rs  mod.rs
uplink/src/collector/stream/: mod.rs
uplink/src/collector/tcpjson/: mod.rs  stats.rs  util.rs
uplink/src/collector/tunshell/: metrics.rs  mod.rs
uplink/src/collector/utils/: delaymap.rs  mod.rs  streams.rs
uplink/src/mqtt/: metrics.rs  mod.rs
uplink/src/serializer/: metrics.rs  mod.rs
uplink/tests/: bridge.rs  bus.rs  downloader.rs  joins.rs  script_runner.rs  serializer.rs
(+1169 files in other folders)
