[patch.crates-io]
serial = { git = "https://github.com/bytebeamio/serial-rs", branch = "android_fix" }

[workspace]
resolver = "2"
members = [
    "uplink",
    "storage",
    "tools/utils",
]
exclude = [
    "tools/deserialize-backup",
    "tools/simulator",
    "tools/tunshell",
]

[workspace.dependencies]
bytes = "1"
log = "0.4"
rand = "0.8"
rumqttc = { git = "https://github.com/bytebeamio/rumqtt" }
tempdir = "0.3"
thiserror = "1"

[profile.dev]
opt-level = 1
debug = true
strip = true
panic = "unwind"

[profile.release]
opt-level = "s"
strip = true
panic = "unwind"
