[patch.crates-io]
serial = { git = "https://github.com/bytebeamio/serial-rs", branch = "android_fix" }

[workspace]
resolver = "2"
members = [
    "uplink",
    "storage",
    "tools/utils",
]
exclude = [
    "tools/deserialize-backup",
    "tools/simulator",
    "tools/tunshell",
]

[workspace.dependencies]
bytes = "1"
flume = "0.10"
futures-util = "0.3"
log = "0.4"
rand = "0.8"
rumqttc = { git = "https://github.com/bytebeamio/rumqtt" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "time"] }

[profile.dev]
opt-level = 1
debug = true
strip = true
panic = "unwind"

[profile.release]
opt-level = "s"
strip = true
panic = "unwind"
