[patch.crates-io]
serial = { git = "https://github.com/bytebeamio/serial-rs", branch = "android_fix" }

[workspace]
resolver = "2"
members = ["uplink", "storage", "tools/utils", "tools/system-stats"]
exclude = ["tools/deserialize-backup", "tools/simulator", "tools/tunshell"]

[workspace.dependencies]
bytes = "1"
flume = "0.11"
futures-util = "0.3"
log = "0.4"
rand = "0.8"
rumqttc = { git = "https://github.com/bytebeamio/rumqtt", rev = "b7ae6b5693d8c9c972d5eb857b2293fb901d57d9" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7", features = ["codec", "time"] }

[profile.dev]
opt-level = 0
# for faster compile, run cycle
# remove if you want to use the debugger
#debug = 0
#strip = "debuginfo"
panic = "unwind"

[profile.release]
opt-level = "s"
strip = true
panic = "unwind"
