[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
flume = "0.10"
log = "0.4"
protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "time"] }