[package]
name = "disk"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
seahash = "4"
log = "0.4"
rumqttc = "0.4"

[dev-dependencies]
tempdir = "0.3"
rand = "0.7"
pretty_env_logger = "0.4"
