[package]
name = "persistentstream"
version = "0.1.0"
authors = ["tekjar <kraviteza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "0.2", features = ["full"] }
derive_more = { version = "0.99", features = ["from"] }
seahash = "4"
byteorder = "1"

[dev-dependencies]
bencher = "0.1"
tempdir = "0.3"
rand = "0.7"
pretty_env_logger = "0.4"

[[bench]]
name = "bench"
harness = false
