[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
log = "0.4"
simplelog = "0.12.0"
uplink = { path = "../uplink" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "time"] }
