[package]
name = "storage"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2021"

[dependencies]
bytes = { workspace = true }
log = { workspace = true }
seahash = "4"
thiserror = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }
rumqttc = { workspace = true }
