[package]
name = "tunshell"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
config = { version = "0.13.2", default-features = false, features = ["toml", "json"] }
log = "0.4"
tracing = { version="0.1", features=["log"] }
tracing-subscriber = { version="=0.3.14", features=["env-filter"] }
rumqttc = { git = "https://github.com/bytebeamio/rumqtt" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "0.2.0"
tunshell-client = { git = "https://github.com/bytebeamio/tunshell.git", branch = "android_patch" }
uplink = { path = "../uplink" }

[build-dependencies]
vergen = { version = "7", features = ["git", "build", "time"] }