[package]
name = "uplink-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "uplink_android"
crate-type = ["cdylib"]

[dependencies]
figment = { version = "0.10.6", features = ["toml", "json"] }
flume = "0.10.9"
log = "0.4"
log-panics = "2.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uplink = { path = "../uplink" }

[build-dependencies]
flapigen = "0.6.0-pre7"
bindgen = { version = "0.57.0", default-features = false }