[package]
name = "uplink-jni"
version = "0.1.0"
authors = ["Devdutt <devdutt@bytebeam.io>"]
edition = "2021"

[dependencies]
figment = { version = "0.10.6", features = ["toml", "json"] }
flume = "0.10.9"
jni = "0.19.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uplink = { path = "../uplink" }

[lib]
crate_type = ["cdylib"]
