[package]
name = "uplink"
version = "2.18.4"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2021"

[dependencies]
bytes = { workspace = true }
flume = { workspace = true }
rumqttc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.3.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
libc = "0.2.169"

# binary utils
rusqlite = { version = "0.32.1", features = ["bundled"] }
anyhow = "1"
axum = "0.6"
config = { version = "0.13.2", default-features = false, features = [
    "toml",
    "json",
] }
structopt = "0.3"

# serializer
async-trait = "0.1"
lz4_flex = "0.10"
pretty-bytes = "0.2.2"
seahash = "4.1.0"

# logging
log = { workspace = true }
regex = "1.7.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# built-in collectors
# tunshell
tokio-compat-02 = "0.2.0"
tunshell-client = { git = "https://github.com/bytebeamio/tunshell.git", branch = "testing-js-sys" }
# simulator
fake = { version = "2.5.0", features = ["derive"] }
rand = { workspace = true }
# downloader
fs2 = "0.4"
replace_with = "0.1.7"
futures-util = { workspace = true }
hex = "0.4"
human_bytes = "0.4"
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "c50e9d3df14c8b63697b865d77dcfa73b09f0884", default-features = false, features = [
    "stream",
    "rustls-tls"
] }
rsa = { version = "0.9.6", features = ["sha2"] }
# systemstats
sysinfo = { git = "https://github.com/bytebeamio/sysinfo", rev = "fe6ee39f08123ffc35f740d41f35f8574fb57ffb" }
# logcat
lazy_static = "1.4.0"
# installer
tar = "0.4"

time = { version = "0.3", features = ["serde", "parsing"] }
base64 = "0.22.1"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[build-dependencies]
vergen = { version = "7", features = ["git", "build", "time"] }

[dev-dependencies]
tempdir = { workspace = true }
