[package]
name = "deserialize-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
disk = { path = "../../disk" }
human_bytes = "0.4"
rumqttc = { git = "https://github.com/bytebeamio/rumqtt" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tabled = "0.11"
thiserror = "1"
