[package]
name = "deserialize-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
human_bytes = "0.4"
lz4_flex = "0.10"
rumqttc = { git = "https://github.com/bytebeamio/rumqtt" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
storage = { path = "../../storage" }
structopt = "0.3"
tabled = "0.11"
thiserror = "1"
