[package]
name = "simulator"
version = "0.1.0"
edition = "2021"
authors = ["Devdutt Shenoi <devdutt@bytebeam.io>"]

[dependencies]
fake = { version = "2.5.0", features = ["derive"] }
flume = { workspace = true }
rumqttc = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simplelog = "0.12.0"
structopt = "0.3"
thiserror = { workspace = true }
tokio = { workspace = true }
uplink = { path = "../../uplink" }
