[package]
name = "system-stats"
version = "0.1.0"
edition = "2021"
authors = ["Devdutt Shenoi <devdutt@bytebeam.io>"]

[dependencies]
futures-util = { version = "0.3", features = ["sink"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12.0"
structopt = "0.3"
sysinfo = "0.26"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "time"] }