[package]
name = "system-stats"
version = "0.1.0"
edition = "2021"
authors = ["Devdutt Shenoi <devdutt@bytebeam.io>"]

[dependencies]
futures-util = { workspace = true, features = ["sink"] }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simplelog = "0.12.0"
structopt = "0.3"
sysinfo = "0.26"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
