[package]
edition = "2018"
name = "uplink-tunshell"
version = "0.1.0"
[dependencies]
clap = { version = "3", features = ["derive"] }
env_logger = "0.8.4"
rand = "0.8.4"
rumqttc = "0.7.0"
serde_json = "^1"

[dependencies.serde]
features = ["derive"]
version = "^1"

[dependencies.tokio]
features = ["rt-threaded"]
version = "0.2.21"

[dependencies.tunshell-client]
git = "https://github.com/TimeToogo/tunshell.git"
rev = "80f991006bba21dfc0bfe07dc3a5c7cc8f0ea93d"

[dependencies.ureq]
features = ["json"]
version = "2.1.1"
ureq = { version = "2.1.1", features = ["json"] }
