[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "push_data"
path = "src/push_data.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "push_to_uplink"
path = "src/push_to_uplink.rs"

[[bin]]
name = "wait_and_send"
path = "src/wait_and_send.rs"

[dependencies]
uplink = { path = "../../uplink" }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec", "time"] }
tokio-stream = "0.1"
serde_json = "1.0"
flume = "0.10"